--- a/software/backend/requirements.txt
+++ b/software/backend/requirements.txt
@@ -1,12 +1,6 @@
-Flask==2.3.3
-Flask-CORS==4.0.0
-Flask-SocketIO==5.3.6
-paho-mqtt==1.6.1
-pandas==2.0.3
-numpy==1.25.2
-scikit-learn==1.3.0
-joblib==1.3.2
-requests==2.31.0
-python-dotenv==1.0.0
-APScheduler==3.10.4
-redis==4.6.0
+Flask
+scikit-learn
+pandas
+numpy
+joblib
+requests
