--- a/software/vendor-dashboard/package.json
+++ b/software/vendor-dashboard/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "lucide-react": "^0.544.0",
+    "mqtt": "^5.14.1",
     "next": "15.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
